# PicFinder

./: .gitignore  README.md  pyproject.toml
src/: MainWindow.py  MainWindow.ui  MainWindow_ui.py  ResultList_ui.py  SettingsWindow.py  SettingsWindow.ui  SettingsWindow_ui.py  build.py  main.py
src/backend/: db_ops.py  image_process.py  qtworkers.py
src/backend/yolo/: YOLO.py  __init__.py
src/dev/: download_libsimple.py  download_models.py  setup.iss
