[tool.poetry]
name = "picfinder"
version = "0.3.0"
description = "A simple windows application to search for images in a directory."
authors = ["HAL9000COM <f1226942353@icloud.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.10,<3.13"
pyside6 = "^6.6.2"
requests = "^2.32.3"

[tool.poetry.group.cpu]
optional=true

[tool.poetry.group.dev]
optional=true

[tool.poetry.group.cpu.dependencies]
onnxruntime = "^1.19.2"
rapidocr = "^3.4.2"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
notebook = "^6.5.3"
nuitka = "^2.1.5"
onnx = "1.16.1"
ultralytics = "^8.3"
onnxslim= "0.1.34"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
