[project]
name = "picfinder"
version = "0.4.0"
description = "A simple windows application to search for images in a directory."
authors = [{ name = "HighDoping", email = "highdoping@gmail.com" }]
readme = "README.md"
requires-python = ">=3.12,<3.14"
dependencies = [
    "pyside6>=6.10.0",
    "onnxruntime>=1.23.2",
    "rapidocr>=3.6.0",
]

[dependency-groups]
dev = [
    "black>=24.3.0",
    "notebook>=6.5.3",
    "nuitka>=2.1.5",
    "onnx==1.16.1",
    "ultralytics>=8.4",
    "onnxslim>=0.1.71",
    "requests>=2.32.5",
]

[tool.uv]
package = false

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"